Added a lot of obviously missing error codes.
